# t-0

./: .gitignore  .vercelignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  package.json  vercel.json
.agents/skills/install-t0/: SKILL.md
.cursor/: environment.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  npm-publish.yml
components/ui/: button.tsx
docs/: browser-terminal.md  for-coding-agents.md
extension/: manifest.json  newtab.html
npm/t-0/: README.md  package.json
terminal/: build-launcher.mjs  index.html  install-launch-agent.sh  pty-server.mjs  server.ts  start.mjs
terminal/launcher-ratatui/: Cargo.toml  README.md
terminal/launcher-ratatui/src/: discover.rs  folder.rs  git_meta.rs  jobs.rs  main.rs  new_project.rs  new_project_input.rs  new_project_ui.rs  settings_ui.rs  theme.rs
www/: package.json
www/public/: index.html
www/scripts/: copy-install.mjs
