[package]
name = "t0-launcher"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "t0"
path = "src/main.rs"

[dependencies]
# Keep Crossterm major aligned with ratatui's default backend (0.29) so events
# and draw share one raw-mode / event-queue implementation.
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = [
    "crossterm",
    "layout-cache",
    "underline-color",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
